Print full arguments in Lingo call stacks